# Compile-Time-Fractals

./: CMakeLists.txt  IDENTIFICATION.txt
app/: test_cexpr_basic_string.cpp  test_mandelbrot.cpp
include/ra/: cexpr_basic_string.hpp  mandelbrot.hpp
